Unit tests component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,8 @@
   <h1>Jokebot 9000</h1>
 </header>
 <main>
-  <div *ngIf="jokeCount > 0">Joke #{{ jokeCount }}: {{ joke }}</div>
+  <div *ngIf="jokeCount > 0">Joke #{{ jokeCount }}:
+    <span id="good-joke">{{ joke }}</span>
+  </div>
   <button (click)="newJoke()">Tell me a new joke</button>
 </main>
